--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 Course :  
 </label>   
 <select>  
-<option value="Course">Course</option>  
-<option value="BCA">BCA</option>  
-<option value="BBA">BBA</option>  
-<option value="B.Tech">B.Tech</option>  
-<option value="MBA">MBA</option>  
-<option value="MCA">MCA</option>  
-<option value="M.Tech">M.Tech</option>  
+<option value="Course">Course</option> 
+<option value="CSE(AI)">CSE(AI)</option>  
+<option value="CSE">CSE</option>  
+<option value="ECE">ECE</option>  
+<option value="EE">EE</option>  
+<option value="CE">CE</option>  
+<option value="ME">ME</option>  
 </select>  
   
 <br>  
